tests/endpoint_macros_compile_fail/invalid_endpoint_path.stderr
error: path `/items` has 0 `:param` segment(s) but the struct has 1 field(s)
 --> $WORKSPACE/tests/endpoint_macros_compile_fail/invalid_endpoint_path.rs
  |
  | #[endpoint(path = "/items")]
  |                   ^^^^^^^^
