tests/endpoint_macros_compile_fail/invalid_endpoint_path.rs
use better_fetch::EndpointParamsDerive;

#[derive(EndpointParamsDerive)]
#[endpoint(path = "/items")]
struct NoColonParams {
    id: u64,
}

fn main() {}
